Post list gradient bug and gbg overflow fix update

--- a/src/styles/App.module.scss
+++ b/src/styles/App.module.scss
@@ -5,6 +5,5 @@
     flex-direction: column;
     align-items: center;
     zoom: 0.9;
-    overflow: hidden;
     @include for-desktop-medium-up { zoom: 1 }
 }
